# QCM_Viewer

./: .gitignore  GUI_UPGRADE_NOTES.md  PLAN.md  README.md  desktop_app.py  docs.md  notebook969998054a.ipynb  pyproject.toml  qcm_region_analysis (1).ipynb
cp-run/: manifest.json
docs/superpowers/plans/: 2026-05-28-qcm-ui-overhaul.md  2026-05-29-qcm-workbench-ui.md
docs/superpowers/specs/: 2026-05-28-qcm-ui-overhaul-design.md  2026-05-29-qcm-workbench-ui-design.md
qcm/: __init__.py  annotations.py  cli.py  demo.py  derived.py  ingest.py  models.py  notebooks.py  panel_app.py  run.py  timeutil.py
qcm/viz/: __init__.py  actions.py  app.py  components.py  controls.py  data.py  design.py  echem.py  layout.py  nav.py  pages.py  plot_theme.py  plots.py  science.py  shell.py  state.py  theme.py
qcm/viz/steps/: __init__.py  _base.py  echem.py  phases.py  qc_drawer.py  quantify.py  reference.py  report.py  results.py  review.py
tests/: conftest.py  test_basic.py  test_components.py  test_design_tokens.py  test_echem.py  test_nav.py  test_no_dead_imports.py  test_plot_theme.py  test_shell_smoke.py  test_steps_contract.py
