[project]
name = "qcm-viewer"
version = "0.1.0"
description = "Scientist-first high-performance QCM parquet viewer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.10",
  "polars>=0.20",
  "pyarrow>=15",
  "panel>=1.4",
  "holoviews>=1.18",
  "hvplot>=0.9",
  "datashader>=0.16",
  "param>=2.0",
  "pydantic>=2",
  "typer>=0.12",
  "rich>=13",
  "numpy>=1.26",
  "pandas>=2.2",
  "jupyter>=1.0",
  "nbformat>=5.10"
]

[project.scripts]
qcm = "qcm.cli:app"

[tool.setuptools.packages.find]
include = ["qcm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
