[project]
name = "qcm-refactor"
version = "0.3.0"
description = "Interactive QCM-D viewer built with Panel, HoloViews, Polars, and DuckDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bokeh>=3.4",
  "datashader>=0.16",
  "duckdb>=1.0",
  "holoviews>=1.19",
  "hvplot>=0.10",
  "jupyterlab>=4.0",
  "jupyter-bokeh>=4.0",
  "ipykernel>=6.29",
  "nbformat>=5.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "panel>=1.5",
  "polars>=1.0",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
  "pywebview>=6.2.1",
  "your-package>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.scripts]
qcm = "qcm.cli:app"

[tool.setuptools.packages.find]
include = ["qcm*"]

[tool.ruff]
line-length = 110

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
